[gd_scene load_steps=2 format=3 uid="uid://dpxojkhsba7ir"]

[ext_resource type="Script" path="res://scripts/messaging.gd" id="1_4tifn"]

[node name="Messaging" type="Node2D"]
script = ExtResource("1_4tifn")

[node name="Username" type="LineEdit" parent="."]
offset_left = 639.0
offset_top = 584.0
offset_right = 819.0
offset_bottom = 616.0
placeholder_text = "USERNAME"

[node name="Send" type="Button" parent="."]
offset_left = 824.0
offset_top = 584.0
offset_right = 991.0
offset_bottom = 616.0
text = "SEND
"

[node name="Message" type="LineEdit" parent="."]
offset_left = 452.0
offset_top = 504.0
offset_right = 993.0
offset_bottom = 535.0
placeholder_text = "MESSAGE"

[node name="ReceivedMessages" type="TextEdit" parent="."]
z_index = 2
offset_left = 452.0
offset_top = 327.0
offset_right = 991.0
offset_bottom = 495.0
wrap_mode = 1

[node name="Label" type="Label" parent="."]
offset_left = 452.0
offset_top = 297.0
offset_right = 983.0
offset_bottom = 320.0
text = "MESSAGES:
"
horizontal_alignment = 1

[node name="Ip" type="LineEdit" parent="."]
offset_left = 639.0
offset_top = 544.0
offset_right = 818.0
offset_bottom = 575.0
text = "localhost"
placeholder_text = "IP ADDRESS"

[node name="Port" type="LineEdit" parent="."]
offset_left = 825.0
offset_top = 544.0
offset_right = 994.0
offset_bottom = 575.0
text = "8080"
placeholder_text = "PORT"

[node name="Host" type="Button" parent="."]
offset_left = 452.0
offset_top = 544.0
offset_right = 632.0
offset_bottom = 575.0
text = "PLAY RED (HOST)"

[node name="Join" type="Button" parent="."]
offset_left = 450.0
offset_top = 584.0
offset_right = 631.0
offset_bottom = 615.0
text = "PLAY BLUE (JOIN)
"

[connection signal="pressed" from="Send" to="." method="_on_send_pressed"]
[connection signal="pressed" from="Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Join" to="." method="_on_join_pressed"]
